--- a/matricks.tex
+++ b/matricks.tex
@@ -19,7 +19,7 @@ While working with matrices I've picked up some tricks, this document is a colle
 \begin{itemize}
     \item $X \in \R^{n \times p}$
     \item $\beta \in \R^p$
-    \item $\Sigma \in \R^{p \times p}$ is symmetric and positive-definite.
+    \item $\Sigma \in \R^{p \times p}$ is symmetric and positive-definite with eigenvalues $\lambda_1, \dots, \lambda_p$.
     \item $A = \diag(a_1, \dots, a_n) \in \R{n \times n}$
 \end{itemize}
 
@@ -35,7 +35,7 @@ While working with matrices I've picked up some tricks, this document is a colle
 
 \begin{align}
     \| X \beta \|_2^2 = &\ \beta^\top X^\top X \beta = \tr(X^\top X \beta \beta^\top) \\
-    \tr(\Sigma \Sigma) = &\ \sum_{i, j} \Sigma_ij^2
+    \tr(\Sigma \Sigma) = &\ \sum_{i, j} \Sigma_{ij}^2
 \end{align}
 
 
@@ -45,7 +45,8 @@ Write the Cholesky decomposition of $\Sigma = U^\top U = LL^\top$.
 
 \begin{align}
     \det(\Sigma) = &\ \det(U^\top) \det(U) = \left( \prod_{i=1}^p U_{ii} \right)^2 \\
-    \tr (\Sigma) = &\ \sum_{ij} U_{ij}^2
+    \tr (\Sigma) = &\ \sum_{i,j} U_{ij}^2 = \sum_{i=1}^p \lambda_i \\
+    \Sigma^{-1}  = &\ U^{-1} \left(U^{-1} \right)^\top
 \end{align}
 
 
